[project]
name = "personal-finance-tracker-agile"
version = "0.1.0"
description = ""
authors = [
    {name = "EmmanuelSHYIRAMBERE",email = "emashyirambere1@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
